force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/AdditionalDescription__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDescription__c</fullName>
    <label>Additional Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>