force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/AmountCalculated__c.field-meta.xml
<CustomField>
    <fullName>AmountCalculated__c</fullName>
    <formula>IF(BlankValue(Amount__c,0) = 0, TotalLineItemDetailAmountCalculated__c, Amount__c)</formula>
    <label>Amount Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>