force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/ChargeTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>ChargeTotalAmount__c</fullName>
    <label>Charge Total Amount</label>
    <summarizedField>ProjectInvoiceLineItemDetail__c.ChargeEntryTypeAmount__c</summarizedField>
    <summaryForeignKey>ProjectInvoiceLineItemDetail__c.ProjectInvoiceLineItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>