force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/CreditTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditTotalAmount__c</fullName>
    <label>Credit Total Amount</label>
    <summarizedField>ProjectInvoiceLineItemDetail__c.CreditEntryTypeAmount__c</summarizedField>
    <summaryForeignKey>ProjectInvoiceLineItemDetail__c.ProjectInvoiceLineItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>