force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/GoverningProjectInvoice__c.field-meta.xml
<CustomField>
    <fullName>GoverningProjectInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GoverningProjectInvoice</label>
    <referenceTo>ProjectInvoice__c</referenceTo>
    <relationshipLabel>Project Invoice Line Items (GoverningProjectInvoice)</relationshipLabel>
    <relationshipName>GoverningProjectInvoice</relationshipName>
    <type>Lookup</type>
</CustomField>