force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/GroupedProjectInvoiceLineItem__c.field-meta.xml
<CustomField>
    <fullName>GroupedProjectInvoiceLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grouped Project Invoice Line Item</label>
    <referenceTo>ProjectInvoiceLineItem__c</referenceTo>
    <relationshipLabel>Project Invoice Line Items</relationshipLabel>
    <relationshipName>Project_Invoice_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>