force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/IsCloned__c.field-meta.xml
<CustomField>
    <fullName>IsCloned__c</fullName>
    <formula>!ISNULL(ProjectInvoice__r.ClonedFrom__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCloned</label>
    <type>Checkbox</type>
</CustomField>