force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/LawsonAccount2__c.field-meta.xml
<CustomField>
    <fullName>LawsonAccount2__c</fullName>
    <label>Lawson Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4500</fullName>
            </value>
            <value>
                <fullName>2530</fullName>
            </value>
            <value>
                <fullName>4600</fullName>
            </value>
            <value>
                <fullName>2590</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>