force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/LawsonAccount__c.field-meta.xml
<CustomField>
    <fullName>LawsonAccount__c</fullName>
    <label>Deprecated Lawson Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>