force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/LawsonSubAccount2__c.field-meta.xml
<CustomField>
    <fullName>LawsonSubAccount2__c</fullName>
    <label>Lawson Sub Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0000</fullName>
            </value>
            <value>
                <fullName>7605</fullName>
            </value>
            <value>
                <fullName>7606</fullName>
            </value>
            <value>
                <fullName>230</fullName>
            </value>
            <value>
                <fullName>238</fullName>
            </value>
            <value>
                <fullName>246</fullName>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>450</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>