force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/LawsonSubAccount__c.field-meta.xml
<CustomField>
    <fullName>LawsonSubAccount__c</fullName>
    <label>Deprecated Lawson Sub Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>