force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/LawsonUnit2__c.field-meta.xml
<CustomField>
    <fullName>LawsonUnit2__c</fullName>
    <label>Lawson Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>4155</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>