force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/LawsonUnit__c.field-meta.xml
<CustomField>
    <fullName>LawsonUnit__c</fullName>
    <label>Deprecated Lawson Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>