force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/LineItemOrder__c.field-meta.xml
<CustomField>
    <fullName>LineItemOrder__c</fullName>
    <label>Line Item Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>