force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/NumberofLineItemDetail__c.field-meta.xml
<CustomField>
    <fullName>NumberofLineItemDetail__c</fullName>
    <label>Number of Line Item Detail</label>
    <summaryForeignKey>ProjectInvoiceLineItemDetail__c.ProjectInvoiceLineItem__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>