force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/PaymentTotalAmount__c.field-meta.xml
<CustomField>
    <fullName>PaymentTotalAmount__c</fullName>
    <label>Payment Total Amount</label>
    <summarizedField>ProjectInvoiceLineItemDetail__c.PaymentEntryTypeAmount__c</summarizedField>
    <summaryForeignKey>ProjectInvoiceLineItemDetail__c.ProjectInvoiceLineItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>