force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/ProjectInvoice__c.field-meta.xml
<CustomField>
    <fullName>ProjectInvoice__c</fullName>
    <label>Project Invoice</label>
    <referenceTo>ProjectInvoice__c</referenceTo>
    <relationshipLabel>Project Invoice Line Items</relationshipLabel>
    <relationshipName>Project_Invoice_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>