force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <formula>BlankValue(QuantityOverride__c, NumberofLineItemDetail__c )</formula>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>