force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/QuantityOverride__c.field-meta.xml
<CustomField>
    <fullName>QuantityOverride__c</fullName>
    <label>Quantity Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>