force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/RateCalculated__c.field-meta.xml
<CustomField>
    <fullName>RateCalculated__c</fullName>
    <formula>if(BLANKVALUE(Rate__c,0) = 0, AmountCalculated__c, Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>