force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>SalesTax</fullName>
            </value>
            <value>
                <fullName>Unreconciled</fullName>
            </value>
            <value>
                <fullName>PB Applied</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Lawson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>