force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/TotalAccrualAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAccrualAmount__c</fullName>
    <formula>NumberofLineItemDetail__c *  AccrualAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Accrual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>