force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/TotalLineItemAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalLineItemAmount__c</fullName>
    <formula>IF(
	ISPICKVAL(Status__c , &#39;Canceled&#39;),
	0.00, 
	IF(Amount__c = 0, ChargeTotalAmount__c, AmountCalculated__c)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line Item Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>