force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/TotalLineItemBalance__c.field-meta.xml
<CustomField>
    <fullName>TotalLineItemBalance__c</fullName>
    <formula>IF( 
	(ISPICKVAL(Status__c , &#39;Canceled&#39;)) , 
	0.00, 
	AmountCalculated__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line Item Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>