force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/TotalLineItemDetailAmountCalculated__c.field-meta.xml
<CustomField>
    <fullName>TotalLineItemDetailAmountCalculated__c</fullName>
    <label>Total Line Item Detail Amount Calculated</label>
    <summarizedField>ProjectInvoiceLineItemDetail__c.RateCalculated__c</summarizedField>
    <summaryForeignKey>ProjectInvoiceLineItemDetail__c.ProjectInvoiceLineItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>