force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasure__c</fullName>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
                <default>true</default>
                <label>Each</label>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>