force-app/main/default/objects/ProjectInvoiceLineItem__c/fields/Visits__c.field-meta.xml
<CustomField>
    <fullName>Visits__c</fullName>
    <label>Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>